# server-mcp-ipmp

./: .env.example  .gitignore  DOCUMENTATION_FONCTIONNELLE.md  Dockerfile  README.md  package-lock.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
clients/claude-code/: .mcp.json
clients/codex/: config.toml
clients/deepagents/: run_agent.py
deploy/: .env.example  Caddyfile  docker-compose.yml
notebooks/: test_deepagents_uvx.ipynb  test_server_bedrock.ipynb
projeqtor-mcp-server/: .env.example  package-lock.json  package.json
projeqtor-mcp-server-python/: .env.example  Dockerfile  pyproject.toml
projeqtor-mcp-server-python/notebooks/: test_server_bedrock.ipynb
projeqtor-mcp-server-python/src/projeqtor_mcp_server/: __init__.py  __main__.py  config.py
projeqtor-mcp-server-python/src/projeqtor_mcp_server/client/: projeqtor_api.py
projeqtor-mcp-server-python/src/projeqtor_mcp_server/prompts/: __init__.py  project_status_report.py  resource_optimization.py  risk_analysis.py  sprint_review.py
projeqtor-mcp-server-python/src/projeqtor_mcp_server/resources/: __init__.py
projeqtor-mcp-server-python/src/projeqtor_mcp_server/tools/: __init__.py  activities.py  common.py  meetings.py  projects.py  resources.py  risks.py
projeqtor-mcp-server-python/src/projeqtor_mcp_server/utils/: dates.py  errors.py  logger.py
projeqtor-mcp-server/src/: config.ts
src/: index.ts
src/client/: aes-ctr.ts
src/projeqtor_mcp_server/: __main__.py  config.py  filters.py  server.py
src/prompts/: project-status-report.ts  (+1 more)
tests/: test_filters.py
(+72 files in other folders)
