[project]
name = "projeqtor-mcp-server-python"
version = "2.0.0"
description = "Production-ready Python MCP server for ProjeQtOr REST API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arena.ai Agent Mode" }]
keywords = ["mcp", "model-context-protocol", "projeqtor", "project-management"]
dependencies = [
  "mcp>=1.10.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "cryptography>=42.0.0",
  "python-dotenv>=1.0.0",
  "numpy>=2.4.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
projeqtor-mcp-server-python = "projeqtor_mcp_server.__main__:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/projeqtor_mcp_server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["projeqtor_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
